# TRDPStack

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  conanfile.py
cmake/: TRDPStackConfig.cmake.in
src/vos/api/: vos_custom_platform.h  vos_sock.h  vos_types.h
src/vos/custom/: vos_private.h
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: test_package.c
